--- a/build.xml
+++ b/build.xml
@@ -1,19 +1,36 @@
 <project name="mapgrid" default="build">
-	<property file="build.properties"/>
+	<property file="build.properties" />
 	<target name="build">
-		<jar destfile="mapgrid.jar" basedir="bin"/>
-		<signjar jar="mapgrid.jar" alias="mapgrid" storepass="${keystore.pass}" keystore="mapgrid.keystore"/>
+		<jar destfile="mapgrid.jar" basedir="bin">
+			<manifest>
+				<attribute name="Main-Class" value="pl.mapgrid.gui.JMapGridMain" />
+			</manifest>
+		</jar>
+		<signjar jar="mapgrid.jar" alias="mapgrid" storepass="${keystore.pass}" keystore="mapgrid.keystore" />
 	</target>
 	
+	<target name="release">
+		<taskdef classname="net.bluecow.googlecode.ant.GoogleCodeUploadTask" 
+			classpath="tools/ant-googlecode-0.0.2.jar" name="gcupload"/>
+		<gcupload 
+		        username="${google.user}" 
+		        password="${google.pass}" 
+		        projectname="mapgrid" 
+		        filename="mapgrid.jar" 
+		        targetfilename="mapgrid-${version}.jar"
+		        summary="Wersja ${version}"
+		        labels="Featured, Type-Package, OpSys-All" />
+	</target>
+
 	<target name="create.keystore">
-		<delete file="mapgrid.keystore"/>
+		<delete file="mapgrid.keystore" />
 		<exec executable="keytool">
-			<arg line="-genkeypair"/>
-			<arg line="-alias mapgrid"/>
-			<arg line="-validity 36500"/>
-			<arg line='-dname "CN=Rzymek FIA, OU=FIA, O=FIA, L=Warszawa, S=Mazowieckie, C=US" '/>
-			<arg line="-keystore mapgrid.keystore"/>
-			<arg line='-storepass "${keystore.pass}"'/>
+			<arg line="-genkeypair" />
+			<arg line="-alias mapgrid" />
+			<arg line="-validity 36500" />
+			<arg line='-dname "CN=Rzymek FIA, OU=FIA, O=FIA, L=Warszawa, S=Mazowieckie, C=US" ' />
+			<arg line="-keystore mapgrid.keystore" />
+			<arg line='-storepass "${keystore.pass}"' />
 		</exec>
 	</target>
 </project>
