--- a/build.xml
+++ b/build.xml
@@ -25,5 +25,6 @@
 	
 	<target name="sign.lib">
 		<signjar jar="lib/jcoord-1.0.jar" alias="mapgrid" storepass="${keystore.pass}" keystore="mapgrid.keystore" />
+		<signjar jar="lib/josm-tested.jar" alias="mapgrid" storepass="${keystore.pass}" keystore="mapgrid.keystore" />
 	</target>
 </project>
