--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/jcoord-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/josm-tested.jar"/>
+	<classpathentry kind="lib" path="lib/jai/clibwrapper_jiio.jar"/>
+	<classpathentry kind="lib" path="lib/jai/jai_imageio.jar"/>
+	<classpathentry kind="lib" path="lib/jai/libclib_jiio.so.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
