--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,3 @@
 main.class=pl.mapgrid.app.Main
 webstart.codebase=http://mapgrid.googlecode.com/files/
+jnlp.href=http://mapgrid.googlecode.com/svn/trunk/webstart/mapgrid.jnlp
