--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,4 @@
 main.class=pl.mapgrid.app.Main
+major.version=1
 webstart.codebase=http://mapgrid.googlecode.com/files/
 jnlp.href=http://mapgrid.googlecode.com/svn/trunk/webstart/mapgrid.jnlp
