--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/jai/jai_imageio.jar"/>
 	<classpathentry kind="lib" path="lib/jai/libclib_jiio.so.jar"/>
 	<classpathentry kind="lib" path="lib/JavaAPIforKml.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-forms-1.4.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
