--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/jai/libclib_jiio.so.jar"/>
 	<classpathentry kind="lib" path="lib/JavaAPIforKml.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-forms-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-common-1.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
