lunch grid app after export
git-svn-id: http://mapgrid.googlecode.com/svn/trunk@139 bc6c1078-3195-aa7d-df54-58ac2b8c4f42

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,5 @@
-main.class=pl.mapgrid.app.Main
+#main.class=pl.mapgrid.app.Main
+main.class=pl.maps.tms.gui2.GetMapsMain
 major.version=1
 webstart.codebase=http://mapgrid.googlecode.com/files/
 jnlp.href=http://mapgrid.googlecode.com/svn/trunk/webstart/mapgrid.jnlp
