--- a/.classpath
+++ b/.classpath
@@ -2,13 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/jcoord-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/josm-tested.jar"/>
-	<classpathentry kind="lib" path="lib/jai/clibwrapper_jiio.jar"/>
-	<classpathentry kind="lib" path="lib/jai/jai_imageio.jar"/>
-	<classpathentry kind="lib" path="lib/jai/libclib_jiio.so.jar"/>
-	<classpathentry kind="lib" path="lib/JavaAPIforKml.jar"/>
-	<classpathentry kind="lib" path="lib/jgoodies-forms-1.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jgoodies-common-1.2.1.jar"/>
+	<classpathentry kind="lib" path="dist/lib/jai/clibwrapper_jiio.jar"/>
+	<classpathentry kind="lib" path="dist/lib/jai/jai_imageio.jar"/>
+	<classpathentry kind="lib" path="dist/lib/jai/libclib_jiio.so.jar"/>
+	<classpathentry kind="lib" path="dist/lib/JavaAPIforKml.jar"/>
+	<classpathentry kind="lib" path="dist/lib/jcoord-1.0.jar"/>
+	<classpathentry kind="lib" path="dist/lib/jgoodies-common-1.2.1.jar"/>
+	<classpathentry kind="lib" path="dist/lib/jgoodies-forms-1.4.2.jar"/>
+	<classpathentry kind="lib" path="dist/lib/josm-tested.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
